--- a/zipkin-storage/cassandra/src/test/resources/span_by_service-stress.yaml
+++ b/zipkin-storage/cassandra/src/test/resources/span_by_service-stress.yaml
@@ -1,4 +1,4 @@
-#    Copyright 2015-2017 The OpenZipkin Authors
+#    Copyright 2015-2019 The OpenZipkin Authors
 #
 #    Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
 #    in compliance with the License. You may obtain a copy of the License at
@@ -11,7 +11,7 @@
 #    the License.
 #
 ###
-### Stress test for stress_zipkin2.service_span_index table
+### Stress test for stress_zipkin2.span_by_service table
 ###
 ### Stress testing is done using the `cassandra-stress` tool
 ###
@@ -44,7 +44,7 @@ columnspec:
 ### Batch Ratio Distribution Specifications ###
 
 insert:
-  partitions: fixed(1)            # 1 pertition key at a time inserts to model a message being generated
+  partitions: fixed(1)            # 1 partition key at a time inserts to model a message being generated
   select:  fixed(1)/1000
   batchtype: UNLOGGED             # Unlogged batches
 
