--- a/zipkin-storage/cassandra/src/test/resources/trace_by_service_remote_service-stress.yaml
+++ b/zipkin-storage/cassandra/src/test/resources/trace_by_service_remote_service-stress.yaml
@@ -10,63 +10,47 @@
 #    or implied. See the License for the specific language governing permissions and limitations under
 #    the License.
 #
-### Stress test for stress_zipkin2.span table
+###
+### Stress test for stress_zipkin2.trace_by_service_remote_service table
 ###
 ### Stress testing is done using the `cassandra-stress` tool
 ###
 ### For example
 ###  cqlsh -f zipkin2-test-schema.cql
-###  cassandra-stress  user profile=span-stress.yaml ops\(insert=1\) no-warmup duration=1m  -rate threads=4 throttle=50/s
+###  cassandra-stress  user profile=trace_by_service_remote_service-stress.yaml ops\(insert=1\) no-warmup duration=1m  -rate threads=4 throttle=50/s
 ###
 ### after a benchmark has been run with only writes, a mixed read-write benchmark can be run with
-###  cassandra-stress  user profile=span-stress.yaml ops\(insert=1,by_trace=1,by_trace_ts_id=1,by_annotation=1\)  duration=1m  -rate threads=4 throttle=50/s
+###  cassandra-stress  user profile=trace_by_service_remote_service-stress.yaml ops\(insert=1,select=1\)  duration=1m  -rate threads=4 throttle=50/s
 
 # Keyspace Name
 keyspace: stress_zipkin2
 
 # Table name
-table: span
+table: trace_by_service_remote_service
 
 
 ### Column Distribution Specifications ###
-#
 
 columnspec:
-  - name: trace_id
-    size: fixed(32)
-    population: uniform(1..10k)
+  - name: service
+    size: uniform(5..20)
+    population: uniform(1..100)
 
-  - name: ts_uuid
-    population: uniform(1..10k)
+  - name: remote_service
+    size: uniform(5..20)
+    population: uniform(1..100)
 
-  - name: id
-    size: fixed(32)
-    population: uniform(1..10k)
+  - name: bucket
+    size: fixed(12)
+    population: fixed(123456789012)
 
   - name: ts
     size: fixed(12)
     population: uniform(1..10k)
 
-  - name: span
-    size: uniform(5..20)
-    population: uniform(1..100)
-
-  - name: parent_id
-    size: uniform(5..20)
-    population: uniform(1..100)
-
-  - name: duration
-    size: fixed(12)
+  - name: trace_id
+    size: fixed(32)
     population: uniform(1..10k)
-
-  - name: l_service
-    size: uniform(5..20)
-    population: uniform(1..100)
-
-  - name: annotation_query
-    size: gaussian(50..500)
-    population: uniform(1..1k)
-
 
 
 ### Batch Ratio Distribution Specifications ###
@@ -81,12 +65,9 @@ insert:
 # A set of basic queries
 #
 queries:
-   by_trace:
-    cql: SELECT * FROM span WHERE trace_id = ?
+   select:
+    cql: SELECT * FROM trace_by_service_remote_service WHERE service = ? AND remote_service = ? AND bucket = ? LIMIT 1
     fields: samerow
-   by_trace_ts_id:
-    cql: SELECT * FROM span WHERE trace_id = ? AND ts_uuid = ? AND id = ?
-    fields: samerow
-   by_annotation:
-    cql: SELECT trace_id, ts, id FROM span WHERE l_service = ? AND annotation_query LIKE ? ALLOW FILTERING
-    fields: samerow
+
+# TODO: adrian doesn't know how to make a timestamp range query from test data
+# search by timestamp range
